tests/cases/errors/unsafe_no_requires.ring
// expect-error: E0411
fn main() {
    unsafe {
        let x = 42
    }
}
